Analyze small mistakes by model

--- a/src/notebooks/06_error_analysis.ipynb
+++ b/src/notebooks/06_error_analysis.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
        "4                4  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +400,7 @@
        "161                 1                  4  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +468,7 @@
    "source": [
     "**Patterns:**\n",
     "\n",
-    "1. **Starts with one sentiment, finishes with another**\n",
+    "1. **Starts with one sentiment, finishes with another - model usually predicts starting sentiment**\n",
     "\n",
     "Gold rating: 1, Predicted rating: 5<br/>\n",
     "*Got this in purple and love it! ordered red and silver and only received red so far, but had to return because it was oddly shaped and didn't fit well like the purple. not sure what happens. maybe miss sized?*\n",
@@ -486,6 +486,117 @@
     "\n",
     "Gold rating: 4, Predicted rating: 1<br/>\n",
     "*I tried this on in store yesterday and didn't buy it due to the dolman style sleeves and the scratchy lace. dolman sleeves look terrible on me, so this was a no go. beware the scratchy lace...i had this on for about 2 minutes and was itching. otherwise, this will wok for plenty of people - the color can be a nice neutral. it does run large - i usually wear a large and sized down to a medium. it didn't work for me, but i'm sure some will find it a nice part of their wardrobe.*\n",
+    "<br/><br/>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gold rating: 1, Predicted rating: 2\n",
+      "I got the blue. it is very short. one side of the shirt i received was shorter that the other. the material feels cheap and pleats out a bit right over the bust - only flattering on small busted models.\n",
+      "========================================================================================================================================================================================================\n",
+      "Gold rating: 1, Predicted rating: 2\n",
+      "This top runs super small in the upper arms, shoulder area..could not even stretch out my arms! ...other then that major problem, the length and body fit were perfect...i am true med and/or large in all retailer tops so i tried sizes 10, 12 and neither worked for me due to arm/shoulder fit...disappointed because it really is a beautiful top...\n",
+      "========================================================================================================================================================================================================\n",
+      "Gold rating: 1, Predicted rating: 2\n",
+      "This sweater was huge, it hung down to my calves! it also is really bulky and scratchy, it feels as if you are wearing an old wool blanket. i think it is only made for really tall and skinny people. i'm 5'2\" and weigh 120lbs. and i ordered a size s, and i was swimming in it. the fabric is very thick, i may be great if you live in alaska or the arctic. it adds about 20lbs to your body frame.......\n",
+      "========================================================================================================================================================================================================\n",
+      "Gold rating: 1, Predicted rating: 2\n",
+      "I was so excited to find this shirt on sale at my local retailer store. but, i did not notice the high percentage of rayon in the fabric, which caused the shirt to shrink significantly in the wash (even when following washing instructions). i washed it on cold with woolite and it is about half the length it was initially! i'm so disappointed. how can you make a shirt that can't withstand washing?!\n",
+      "========================================================================================================================================================================================================\n",
+      "Gold rating: 1, Predicted rating: 2\n",
+      "I was really hoping to like this, but it did not look the way it does on the model, at least not on me. the sharkbite hem is much more pronounced and looser. the one in the photo looks like it was pinned back. i am 5'8\" and usually wear a medium or large. i got a medium and there was a lot more material on the bottom half than the photo shows. it made me look bigger and was not flattering. material has a nice weave but it's thin and delicate. i bought the (holly) deep olive and the blue. colors\n",
+      "========================================================================================================================================================================================================\n",
+      "Gold rating: 1, Predicted rating: 2\n",
+      "I was so looking forward to receiving this in the mail! when it arrived, i was very disappointed. the color is more mauve than dusty pink, and the fabric is stiff and wrinkled.....not at all what i expect velvet to be (flowy and soft). the fabric seems very cheap for the price point. i usually like floreat, but this one is headed right back to the store!\n",
+      "========================================================================================================================================================================================================\n",
+      "Gold rating: 1, Predicted rating: 2\n",
+      "I usually wear a size xs or s in retailer tops, ordered this top in an s and it was so wide on the sides and huge it fit like a tent. not even remotely flattering. i thought about ordering it in an xs, however, i could tell the xs was still going to have way too much fabric. back it goes.\n",
+      "========================================================================================================================================================================================================\n",
+      "Gold rating: 1, Predicted rating: 2\n",
+      "I ordered this to wear for a holiday party hoping to have something unique and dressy. it was too bulky at the shoulders and looked like something a football player would wear. the little ruffled flower pieces were random at the top and stuck out in all the wrong directions. it wasn't as elegant as the model pic (is it ever?) and for this price should fit like a glove. went back within seconds. also, it's pretty short, and bulky short isn't flattering on too many people.\n",
+      "========================================================================================================================================================================================================\n",
+      "Gold rating: 1, Predicted rating: 2\n",
+      "Wanted to love this colorful romper. the fabric was suuuuper thin and very cheap feeling and looking. no way would i wear this.\n",
+      "========================================================================================================================================================================================================\n"
+     ]
+    }
+   ],
+   "source": [
+    "limit = 10\n",
+    "skip = 0\n",
+    "cnt = 0\n",
+    "gold_rating = 2\n",
+    "predicted_rating = 3\n",
+    "for _, row in df[(df['Gold Rating'] == gold_rating) & (df['Predicted Rating'] == predicted_rating)].iterrows():\n",
+    "  if cnt > skip:\n",
+    "    print(f\"Gold rating: {row['Gold Rating']}, Predicted rating: {row['Predicted Rating']}\")\n",
+    "    print(row['Review Text'])\n",
+    "    print('='*200)\n",
+    "  cnt += 1\n",
+    "  if cnt == limit:\n",
+    "    break"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Patterns:**\n",
+    "\n",
+    "1. **Mainly positive sentiment with one litle complainment - probably because of that, model doesn't give 5 rating**\n",
+    "\n",
+    "Gold rating: 5, Predicted rating: 4<br/>\n",
+    "<br/>\n",
+    "*Very pretty dress! wearing it for a family beach portrait. it may run a little big but not terribly. it is also not super long as pictured. i'm 5'6 and it's perfect with a flat.*\n",
+    "<br/><br/>\n",
+    "*Super cute, well made, great embroidery. waist runs big.*\n",
+    "<br/><br/>\n",
+    "*I like this dress a lot. it does not have much form but with a belt looks great!*\n",
+    "\n",
+    "2. **Fully positive sentiment, no reason to give lower than 5 rating - that is probably why model gives 5 rating**\n",
+    "\n",
+    "Gold rating: 4, Predicted rating: 5<br/>\n",
+    "<br/>\n",
+    "*I love this vest, good denim quality*\n",
+    "<br/><br/>\n",
+    "*Tried this on in the store, very soft and hangs well, better on, than the hanger. needless to say i bought it!*\n",
+    "<br/><br/>\n",
+    "*I love the color of this top. it is a dark olive green and elegant. i mostly wear it under a blazer with my jeans. it fits true to size and the smocking detail is casual and elegant at the same time.*\n",
+    "<br/><br/>\n",
+    "*Love this dress. wear it with sneakers or boots. can add a belt, or the right accessories to dress it up.*\n",
+    "<br/><br/>\n",
+    "\n",
+    "3. **Negative sentiment, with elements of positive sentiment(buyers hoped that it can be good purchase) - model should learn to better recognize positive elements in review**\n",
+    "\n",
+    "Gold rating: 2, Predicted rating: 1<br/>\n",
+    "<br/>\n",
+    "*Cup size is really small for a medium. no way to adjust the back strap. ended up giving it to my daughter. cute but so poorly executed.*\n",
+    "<br/><br/>\n",
+    "*Unfortunately, this dress is shaped like a sack and has no shape to speak of. i have sent it back for a refund :( too big, too shapeless.*\n",
+    "<br/><br/>\n",
+    "*It was huge. material looked good but was too bulky. will be returning it.*\n",
+    "<br/><br/>\n",
+    "*Cute in the on line photo but in person it looks cheap and has gold running through it. if you look really close in the photo you can see it.*\n",
+    "<br/><br/>\n",
+    "\n",
+    "4. **Starts with positive sentiment, ends with negative sentiment - A lot of positive words in all parts of review, maybe that is the reason why model gives higher rating**\n",
+    "\n",
+    "Gold rating: 2, Predicted rating: 3<br/>\n",
+    "<br/>\n",
+    "*It's a cute topper. it fits nicely through the shoulders and arms, and because of the a-line, through the bottom. but the chest is 3 sizes too small and i don't have a big chest. the fabric is very scratchy, and mine arrived unbuttoned and unzipped, and i suspect it had been worn. going back. not tracy reese's best piece.*\n",
+    "<br/><br/>\n",
+    "*This dress looks very beautiful on the model shown. unfortunately, when i tried it on, it did not flow as nicely as i would have liked it to. i also didn't care much for the waist ties on the side. an elastic waist might have been better.*\n",
+    "<br/><br/>\n",
+    "*I loved the look of this sweater on-line, but it just didn't work for me. the fit wasn't good enough. the style okay. the color fine. the feel, scratchy. overall, it did not work for my body.*\n",
+    "<br/><br/>\n",
+    "*Pretty design, but when i tried it on, the fabric was thin and delicate. i don't think it would last long with much wear. too bad. if the fabric were sturdier, it'd be great as the cut is flattering and i love the pockets.*\n",
     "<br/><br/>"
    ]
   }
